#83 - fix jdk8 build